<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pager_container"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        tools:text="@string/cImport"
        android:layout_weight="0.1"
        style="@style/HeaderText"
        android:layout_height="0dp"/>
    <TextView
        android:layout_width="wrap_content"
        tools:text="@string/cTax"
        android:layout_weight="0.1"
        style="@style/HeaderText"
        android:layout_height="0dp"/>

    <TextView
        android:layout_width="wrap_content"
        tools:text="@string/cTest"
        android:layout_weight="0.1"
        style="@style/HeaderText"
        android:layout_height="0dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="#000"
        android:layout_weight="0.7"
        android:layout_height="0dp"/>

</LinearLayout>