<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="clcvam.elitiv.com.calculatorvamal.fragments.Taxe"
    android:background="#ecf0f1"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:clickable="true"
    android:id="@+id/devLayout"
    >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/linearLayout">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBenzin"
            android:background="@drawable/togle_btn_selector"
            android:layout_margin="5dp"
            android:enabled="true"
            android:textColor="#fff"
            android:textOff="@string/btnBenzin"
            android:textOn="@string/btnBenzin"
            android:text="@string/btnBenzin"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:checked="true" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMotorina"
            android:background="@drawable/togle_btn_selector"
            android:id="@+id/btnDiesel"
            android:layout_margin="5dp"
            android:textColor="#fff"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:textOff="@string/btnMotorina"
            android:textOn="@string/btnMotorina"
            android:checked="false" />
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="15"
        android:maxLength="5"
        android:gravity="center_horizontal"
        android:id="@+id/editCapacity"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnSelectYear"
        android:layout_alignStart="@+id/btnSelectYear"
        android:layout_alignRight="@+id/btnSelectYear"
        android:layout_alignEnd="@+id/btnSelectYear" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcVam"
        android:id="@+id/btnCalcVam"
        android:background="@drawable/simple_btn_pressed"
        android:textColor="@color/darkBlue"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_below="@+id/editCapacity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/rezultDevTxt"
        android:textColor="@color/darkBlue"
        android:layout_marginBottom="61dp"
        android:textSize="35sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="0.0 €" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSelectYear"
        android:layout_marginTop="38dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:background="@drawable/simple_btn_pressed"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/devYear"
        android:textColor="@color/darkBlue"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxa"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:textColor="@color/darkBlue"
        android:layout_above="@+id/rezultDevTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />

</RelativeLayout>